<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".AddStudentActivity">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvTitle"
            android:textSize="@dimen/largeText"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/add_student"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etName"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:maxLength="39"
            android:hint="@string/name"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etGuardianName"
            android:inputType="textPersonName"
            android:maxLength="39"
            android:layout_marginBottom="10dp"
            android:hint="@string/guardianName"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etPhoneNumber"
            android:inputType="phone"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_number"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etRollNumber"
            android:inputType="number"
            android:layout_marginBottom="20dp"
            android:hint="@string/roll_number"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:text="@string/add"
            android:layout_width="match_parent"
            android:onClick="addStudentClicked"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>