<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditStudentActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTitle"
                android:textSize="@dimen/largeText"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/edit_student"
                android:layout_marginBottom="50dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etName"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etGuardianName"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:hint="@string/guardianName"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etPhoneNumber"
                android:inputType="phone"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etRollNumber"
                android:inputType="number"
                android:layout_marginBottom="20dp"
                android:hint="@string/roll_number"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etFee"
                android:inputType="number"
                android:layout_marginBottom="20dp"
                android:hint="@string/fee"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:padding="15dp"
                android:textColor="@color/colorWhite"
                android:text="@string/update"
                android:layout_width="match_parent"
                android:onClick="editStudentClicked"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorDanger"
        android:onClick="deleteStudentClicked"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_delete_black_24dp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>