<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvTitle"
            android:textSize="@dimen/largeText"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/login"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:inputType="textEmailAddress"
            android:background="@drawable/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/custom_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:onClick="loginClicked"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>