<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rlRoot"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context=".MainDashboardActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_margin="15dp"
            android:id="@+id/tvTitle"
            android:text="@string/dashboard"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ScrollView
            android:layout_below="@id/tvTitle"
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="15dp"
                        android:onClick="classesClicked"
                        app:cardBackgroundColor="@color/colorPrimary"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:padding="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:id="@+id/ivClasses"
                                android:layout_width="match_parent"
                                android:tint="@color/colorWhite"
                                android:src="@drawable/ic_collections_bookmark_black_24dp"
                                android:layout_height="70dp"/>
                            <TextView
                                android:id="@+id/tvStudents"
                                android:layout_below="@id/ivClasses"
                                android:text="@string/classes"
                                android:textColor="@color/colorWhite"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:onClick="coursesClicked"
                        android:layout_marginEnd="15dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        android:layout_marginBottom="15dp"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:padding="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:id="@+id/ivCourses"
                                android:layout_width="match_parent"
                                android:tint="@color/colorWhite"
                                android:src="@drawable/ic_library_books_black_24dp"
                                android:layout_height="70dp"/>
                            <TextView
                                android:layout_below="@id/ivCourses"
                                android:textColor="@color/colorWhite"
                                android:layout_centerHorizontal="true"
                                android:id="@+id/tvCourses"
                                android:text="@string/courses"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/btnSendFeeSMS"
        android:text="@string/send_fee_sms"
        android:layout_gravity="bottom|start"
        app:icon="@drawable/ic_message_black_24dp"
        android:onClick="feeSmsClicked"
        android:layout_height="wrap_content" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addFee"
        android:text="@string/add_fee"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:onClick="addFeeClicked"
        android:layout_margin="16dp"
        app:icon="@drawable/ic_add_black_24dp"
        android:layout_height="wrap_content"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>